name:                lux
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Kristian Glass
maintainer:          fiatlux@doismellburning.co.uk
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lux
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , BoundedChan
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
