name:                lux
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Kristian Glass
maintainer:          fiatlux@doismellburning.co.uk
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lux
  main-is:             Lux/Main.hs
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , BoundedChan
                     , process
                     , text
                     , network-metrics
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    ghc-options:
        -Wall -Werror -fno-warn-missing-signatures
    hs-source-dirs:
        src
        , test
    main-is:
        Spec.hs
    build-depends:
        base >= 4.6 && < 4.7
        , BoundedChan
        , HUnit
        , hspec
        , process
        , text
